# bare-metal-manager-core

./: Cargo.toml  SESSION.md
crates/admin-cli/src/: rpc.rs
crates/agent/src/: command_line.rs  ethernet_virtualization.rs  main_loop.rs
crates/api-db/migrations/: 20260304120000_dns_records_table.sql
crates/api-db/src/dns/: domain.rs
crates/api-integration-tests/: Cargo.toml
crates/api-integration-tests/tests/: lib.rs
crates/api-model/src/: vpc.rs
crates/api-model/src/dns/: label.rs  mod.rs
crates/api-model/src/site_explorer/: mod.rs
crates/api-model/src/tenant/: mod.rs
crates/api/src/: db_init.rs  setup.rs
crates/api/src/cfg/: file.rs
crates/api/src/dpa/: handler.rs
crates/api/src/handlers/: domain.rs
crates/api/src/site_explorer/: mod.rs  redfish.rs
crates/api/src/tests/: instance.rs  tenants.rs
crates/api/src/web/: domain.rs  (+2 more)
crates/bmc-explorer/src/: computer_system.rs
crates/ipmitool/: CHANGELOG.md  CLAUDE.md  Cargo.toml
crates/ipmitool/examples/: api-migration.rs
crates/ipmitool/src/: lib.rs  main.rs  sol.rs
crates/ipmitool/src/cli/: channel.rs  chassis.rs  fru.rs  mc.rs  mod.rs  raw.rs  sdr.rs  sel.rs  sensor.rs  sol.rs  user.rs
crates/ipmitool/src/cmd/: channel.rs  chassis.rs  fru.rs  mc.rs  mod.rs  sdr.rs  sel.rs  sensor.rs  sol.rs  user.rs
crates/ipmitool/src/crypto/: aes_cbc.rs  keys.rs
crates/ipmitool/src/transport/: http.rs  mock.rs  mod.rs
crates/ipmitool/src/transport/lan/: auth.rs  mod.rs  packet.rs
crates/ipmitool/src/transport/lanplus/: header.rs  mod.rs  packet.rs  rakp.rs  session.rs  sol.rs
crates/ipmitool/src/types/: fru_types.rs  mod.rs
crates/macros/: Cargo.toml
crates/network/: Cargo.toml
crates/rpc/proto/: dns.proto
crates/secrets/src/: credentials.rs
crates/sqlx-testing/: Cargo.toml
crates/sqlx-testing/src/: lib.rs
(+4 files in other folders)
