#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-ipmitool"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ipmitool"

[[bin]]
name = "carbide-ipmitool"
path = "src/main.rs"

[dependencies]
aes = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
color-eyre = { workspace = true }
digest = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
